--- a/css/pages/case.css
+++ b/css/pages/case.css
@@ -15,6 +15,7 @@
   display: flex;
   align-items: center;
   flex-direction: row;
+  justify-content: flex-start;
   flex-wrap: nowrap;
   overflow: scroll;
   margin: 0rem 0.5rem;
@@ -32,6 +33,7 @@
   margin: 0.5rem;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin-bottom: 2.8rem;
 }
 
 .caseBox {
