--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -135,6 +135,30 @@ height:3.5rem;
 .more a {
   color:rgba(255,255,255,1);
 }
+.describBox {
+  width: 100%;
+  height: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  overflow: hidden;
+}
+/* .menberdesc {
+  display: flex;
+  width: 2.5rem;
+  flex-direction: row;
+  overflow: hidden;
+  text-overflow:ellipsis;
+  white-space: nowrap;
+
+}
+.menberposition {
+  display: flex;
+  width: 2.5rem;
+  overflow: hidden;
+} */
+
 @media screen and (max-width: 374px) {
   .themeTitle img{
     width:90%;
