--- a/css/pages/team.css
+++ b/css/pages/team.css
@@ -50,7 +50,7 @@ body {
   color:rgba(51,51,51,1);
   display: -webkit-box;
   -webkit-box-orient: vertical;
-  -webkit-line-clamp: 1;
+  -webkit-line-clamp: 4;
   overflow: hidden;
   opacity: 0.7;
 }
@@ -90,8 +90,7 @@ overflow: hidden;
 
 .menberPhoto img{
   width:9rem;
-  height: auto;
-  max-height: 100%;
+  height: 100%;
 }
 .menberBox {
   background-color: #000000;
@@ -102,6 +101,7 @@ overflow: hidden;
   padding:0.5rem 1rem;
   display: flex;
   flex-direction: row;
+  height: 7rem;
 }
 .menberPhoto {
   background-color: white;
@@ -112,6 +112,8 @@ overflow: hidden;
 .menberIntroduce {
   background-color: white;
   padding-left: 0.5rem;
+  width: 100%;
+  overflow: hidden;
 }
 
 /* @media screen and (max-width: 18.75rem) {
@@ -126,7 +128,6 @@ overflow: hidden;
 @media screen and (max-width: 374px) {
   .menberPhoto img {
     width:6rem;
-    height: auto;
-    max-height: 100%;
+    height: 100%;
   }
 }
