--- a/css/pages/caseInfo.css
+++ b/css/pages/caseInfo.css
@@ -2,7 +2,7 @@
   margin: 1rem;
 }
 .caseInfoBox img{
-  width: auto;
+  width: 100%;
   height: auto;
   max-width: 100%;
 }
@@ -36,4 +36,14 @@
   color:rgba(51,51,51,1);
   line-height:0.9rem;
   opacity: 0.7;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.itemcontent p{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  white-space:normal; 
+  /* overflow: visible; */
 }
