--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -168,3 +168,16 @@ height:3.5rem;
     width: 90%;
   }
 }
+
+
+/* img:after  {
+  content: url('./../../images/designbg.png');
+  display: block;
+  position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+} */
